<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinatorLayout"
    tools:context=".views.FormActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_notas" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="65dp"
                android:layout_height="55dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="55dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:srcCompat="@android:drawable/ic_menu_mylocation" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/create_incidence"
                style="@style/TitlesAbout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.426"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="65dp"
                android:layout_height="55dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView10"
                app:srcCompat="@android:drawable/ic_menu_edit" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="65dp"
                android:layout_height="55dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="70dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView5"
                app:srcCompat="@android:drawable/ic_menu_more" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="65dp"
                android:layout_height="55dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addOptions"
                app:srcCompat="@android:drawable/ic_menu_call" />

            <ImageButton
                android:id="@+id/photo"
                android:layout_width="65dp"
                android:layout_height="55dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView8"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

            <ImageView
                android:id="@+id/dateimage"
                android:layout_width="65dp"
                android:layout_height="55dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/photo"
                app:srcCompat="@android:drawable/ic_menu_my_calendar" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:text="@string/issue_resolved"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView10"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/delete"
                style="@style/buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="16dp"
                android:text="@string/delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTIL" />

            <Button
                android:id="@+id/save"
                style="@style/buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTIL"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/empty"
                style="@style/buttons"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toEndOf="@+id/photo"
                app:layout_constraintTop_toBottomOf="@+id/phoneTIL" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTIL"
                android:layout_width="250dp"
                android:layout_height="90dp"
                android:layout_marginTop="35dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/switch1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameTIET"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:hint="@string/name_of_incidence" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneTIL"
                android:layout_width="250dp"
                android:layout_height="90dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView8"
                app:layout_constraintTop_toBottomOf="@+id/addOptions">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneTIET"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:hint="@string/phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="216dp"
                android:layout_height="46dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.471"
                app:layout_constraintStart_toEndOf="@+id/imageView7"
                app:layout_constraintTop_toBottomOf="@+id/siteTIL" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionTIL"
                android:layout_width="250dp"
                android:layout_height="180dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/write_incidence"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView11"
                app:layout_constraintTop_toBottomOf="@+id/dateTIL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionTIET"
                    android:layout_width="250dp"
                    android:layout_height="150dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateTIL"
                android:layout_width="250dp"
                android:layout_height="90dp"
                android:layout_marginTop="35dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dateimage"
                app:layout_constraintTop_toBottomOf="@+id/empty">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateTIET"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:hint="@string/date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/siteTIL"
                android:layout_width="250dp"
                android:layout_height="90dp"
                android:layout_marginTop="25dp"
                android:hint="@string/site"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/nameTIL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/siteTIET"
                    android:layout_width="250dp"
                    android:layout_height="60dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="65dp"
                android:layout_height="55dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4"
                app:srcCompat="@android:drawable/ic_lock_lock" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="65dp"
                android:layout_height="55dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="120dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateimage"
                app:srcCompat="@android:drawable/ic_menu_help" />

            <Button
                android:id="@+id/addOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_option"
                style="@style/buttons"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.569"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>